--- a/apps/api/v2/package.json
+++ b/apps/api/v2/package.json
@@ -27,6 +27,7 @@
     "@calcom/platform-constants": "*",
     "@calcom/platform-libraries": "npm:@calcom/platform-libraries@0.0.28",
     "@calcom/platform-libraries-0.0.2": "npm:@calcom/platform-libraries@0.0.2",
+    "@calcom/platform-libraries-1.2.3": "npm:@calcom/platform-libraries@1.2.3",
     "@calcom/platform-types": "*",
     "@calcom/platform-utils": "*",
     "@calcom/prisma": "*",
