--- a/turbo.json
+++ b/turbo.json
@@ -42,7 +42,7 @@
         "STRIPE_TEAM_MONTHLY_PRICE_ID",
         "STRIPE_ORG_MONTHLY_PRICE_ID",
         "NEXT_PUBLIC_API_V2_URL",
-        "NEXT_PUBLIC_VAPID_PUBLIC_KEY"
+        "NEXT_PUBLIC_VAPID_PUBLIC_KEY",
         "BUILD_STANDALONE"
       ]
     },
