Revert "fix: uncaught types errors in invite members team handler (#16109)"
This reverts commit a091c60618387103ace4f682595a791d18fc39c5.

--- a/turbo.json
+++ b/turbo.json
@@ -128,11 +128,11 @@
       "outputs": ["dist/**", "build/**"]
     },
     "dev": {
-      "dependsOn": ["//#env-check:common", "//#env-check:app-store", "^dev"],
+      "dependsOn": ["//#env-check:common", "//#env-check:app-store"],
       "cache": false
     },
     "dx": {
-      "dependsOn": ["//#env-check:common", "//#env-check:app-store", "^dx"],
+      "dependsOn": ["//#env-check:common", "//#env-check:app-store"],
       "cache": false
     },
     "lint": {
