--- a/.github/workflows/publish-report.yml
+++ b/.github/workflows/publish-report.yml
@@ -1,5 +1,6 @@
 on:
   workflow_call:
+  workflow_dispatch:
 permissions:
   contents: write
   issues: write
@@ -18,6 +19,7 @@ jobs:
         with:
           repository: calcom/test-results
           ref: gh-pages
+          token: ${{ secrets.GH_ACCESS_TOKEN }}
       - name: Set Git User
         # see: https://github.com/actions/checkout/issues/13#issuecomment-724415212
         run: |
@@ -47,6 +49,7 @@ jobs:
         # commit report, then try push-rebase-loop until it's able to merge the HTML report to the gh-pages branch
         # this is necessary when this job running at least twice at the same time (e.g. through two pushes at the same time)
         run: |
+          date > timestamp.txt
           git add .
           git commit -m "workflow: add HTML report for run-id ${{ github.run_id }} (attempt:  ${{ github.run_attempt }})"
 
