--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -106,6 +106,9 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
+      # Doing this custom checkout of the common.json files from the PR since we don't
+      # want to checkout the entire branch for security reasons as this job is granted
+      # write permissions.
       - run: find apps/web/public/static/locales/** -name "common.json" | xargs git checkout ${{ github.event.pull_request.head.sha }} --
         shell: bash
       - uses: replexica/replexica@main
