--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -110,7 +110,9 @@ jobs:
       # want to checkout the entire branch for security reasons as this job is granted
       # write permissions.
       - run: git fetch --depth=2 origin ${{ github.event.pull_request.head.sha }}
+        if: ${{ github.event.pull_request.head.sha != '' }}
       - run: find apps/web/public/static/locales/** -name "common.json" | xargs git checkout ${{ github.event.pull_request.head.sha }} --
+        if: ${{ github.event.pull_request.head.sha != '' }}
         shell: bash
       - uses: replexica/replexica@main
         with:
