--- a/turbo.json
+++ b/turbo.json
@@ -230,6 +230,7 @@
     "APP_ROUTER_EVENT_TYPES_ENABLED",
     "APP_ROUTER_GETTING_STARTED_STEP_ENABLED",
     "APP_ROUTER_SETTINGS_ADMIN_ENABLED",
+    "APP_ROUTER_SETTINGS_ORG_ENABLED",
     "APP_ROUTER_SETTINGS_TEAMS_ENABLED",
     "APP_ROUTER_WORKFLOWS_ENABLED",
     "APP_ROUTER_VIDEO_ENABLED",
