Make URLs for terms and privacy policy customizable

--- a/.env.example
+++ b/.env.example
@@ -362,10 +362,13 @@ TASKER_ENABLE_EMAILS=0
 # Ratelimiting via unkey
 UNKEY_ROOT_KEY=
 
-
 # Used for Cal.ai Enterprise Voice AI Agents
 # https://retellai.com
 RETELL_AI_KEY=
 
 # Used to disallow emails as being added as guests on bookings
 BLACKLISTED_GUEST_EMAILS=
+
+# Custom privacy policy / terms URLs (for self-hosters: change to your privacy policy / terms URLs)
+NEXT_PUBLIC_WEBSITE_PRIVACY_POLICY_URL=
+NEXT_PUBLIC_WEBSITE_TERMS_URL=
