fix: handle private registry during build

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,3 +7,8 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
 
 yarnPath: .yarn/releases/yarn-3.4.1.cjs
+
+npmScopes:
+  deep-consulting-solutions:
+    npmRegistryServer: "https://npm.pkg.github.com"
+    npmAuthToken: <npm-auth-token>
