--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -115,8 +115,11 @@ jobs:
         if: ${{ github.event.pull_request.head.sha != '' }}
         shell: bash
       - uses: replexica/replexica@main
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           api-key: ${{ secrets.CI_REPLEXICA_API_KEY }}
+          pull-request: true
 
   type-check:
     name: Type check
@@ -152,7 +155,7 @@ jobs:
     if: ${{ needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
     uses: ./.github/workflows/api-v2-production-build.yml
     secrets: inherit
-  
+
   build-atoms:
     name: Production builds
     needs: [changes, check-label, deps]
@@ -238,7 +241,6 @@ jobs:
       [
         changes,
         lint,
-        i18n,
         type-check,
         unit-test,
         integration-test,
