--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -5,7 +5,7 @@ on:
       - main
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   i18n:
