--- a/turbo.json
+++ b/turbo.json
@@ -188,7 +188,12 @@
     "@calcom/embed-core#build": {
       "cache": false,
       "outputs": ["../../../apps/web/public/embed/**"],
-      "env": ["EMBED_PUBLIC_VERCEL_URL", "EMBED_PUBLIC_WEBAPP_URL", "EMBED_PUBLIC_EMBED_FINGER_PRINT", "EMBED_PUBLIC_EMBED_VERSION"]
+      "env": [
+        "EMBED_PUBLIC_VERCEL_URL",
+        "EMBED_PUBLIC_WEBAPP_URL",
+        "EMBED_PUBLIC_EMBED_FINGER_PRINT",
+        "EMBED_PUBLIC_EMBED_VERSION"
+      ]
     },
     "embed-tests-update-snapshots:ci": {
       "cache": false,
@@ -234,6 +239,7 @@
     "APP_ROUTER_WORKFLOWS_ENABLED",
     "APP_ROUTER_VIDEO_ENABLED",
     "APP_ROUTER_TEAMS_ENABLED",
+    "APP_ROUTER_AVAILABILITY_ENABLED",
     "APP_USER_NAME",
     "BASECAMP3_CLIENT_ID",
     "BASECAMP3_CLIENT_SECRET",
