Added prisma optimize support with flag

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ DATABASE_URL="postgresql://postgres:@localhost:5450/calendso"
 # Use the same one as DATABASE_URL if you're not using a connection pooler
 DATABASE_DIRECT_URL="postgresql://postgres:@localhost:5450/calendso"
 INSIGHTS_DATABASE_URL=
-
+ENABLE_OPTIMIZE_EXTENSION=
 # Uncomment to enable a dedicated connection pool for Prisma using Prisma Data Proxy
 # Cold boots will be faster and you'll be able to scale your DB independently of your app.
 # @see https://www.prisma.io/docs/data-platform/data-proxy/use-data-proxy
