--- a/apps/api/v2/vercel.json
+++ b/apps/api/v2/vercel.json
@@ -10,7 +10,7 @@
     {
       "src": "/(.*)",
       "dest": "src/main.ts",
-      "methods": ["GET", "POST", "PUT", "DELETE"]
+      "methods": ["GET", "PATCH", "DELETE", "HEAD", "POST", "PUT", "OPTIONS"]
     }
   ]
 }
