--- a/packages/app-store/nextcloudtalk/config.json
+++ b/packages/app-store/nextcloudtalk/config.json
@@ -13,13 +13,10 @@
     "location": {
       "type": "integrations:{SLUG}_conferencing",
       "label": "{TITLE}",
-      "linkType": "static",
-      "organizerInputPlaceholder": "https://video.app/mylink",
-      "urlRegExp": "^http(s)?:\\/\\/(www\\.)?video.app\\/[a-zA-Z0-9]*"
+      "linkType": "dynamic"
     }
   },
   "description": "Nextcloud Talk is a fully self hosted, on-premises audio/video and chat communication service. It features web and mobile apps and is designed to offer the highest degree of security while being easy to use.",
   "isTemplate": false,
-  "__createdUsingCli": true,
-  "dirName": "nextcloudtalk"
+  "__createdUsingCli": true
 }
