Add env variables for auth/forgot-password, auth/login, auth/logout

--- a/turbo.json
+++ b/turbo.json
@@ -234,6 +234,9 @@
     "APP_ROUTER_SETTINGS_TEAMS_ENABLED",
     "APP_ROUTER_WORKFLOWS_ENABLED",
     "APP_ROUTER_VIDEO_ENABLED",
+    "APP_ROUTER_AUTH_FORGOT_PASSWORD_ENABLED",
+    "APP_ROUTER_AUTH_LOGIN_ENABLED",
+    "APP_ROUTER_AUTH_LOGOUT_ENABLED",
     "APP_ROUTER_TEAMS_ENABLED",
     "APP_USER_NAME",
     "BASECAMP3_CLIENT_ID",
