--- a/.env.example
+++ b/.env.example
@@ -348,6 +348,9 @@ APP_ROUTER_GETTING_STARTED_STEP_ENABLED=0
 APP_ROUTER_APPS_ENABLED=0
 APP_ROUTER_VIDEO_ENABLED=0
 APP_ROUTER_TEAMS_ENABLED=0
+APP_ROUTER_AUTH_FORGOT_PASSWORD_ENABLED=0
+APP_ROUTER_AUTH_LOGIN_ENABLED=0
+APP_ROUTER_AUTH_LOGOUT_ENABLED=0
 
 # disable setry server source maps
 SENTRY_DISABLE_SERVER_WEBPACK_PLUGIN=1
