--- a/.env.example
+++ b/.env.example
@@ -351,6 +351,8 @@ APP_ROUTER_TEAMS_ENABLED=0
 APP_ROUTER_AUTH_FORGOT_PASSWORD_ENABLED=0
 APP_ROUTER_AUTH_LOGIN_ENABLED=0
 APP_ROUTER_AUTH_LOGOUT_ENABLED=0
+APP_ROUTER_AUTH_NEW_ENABLED=0
+APP_ROUTER_AUTH_SAML_ENABLED=0
 
 # disable setry server source maps
 SENTRY_DISABLE_SERVER_WEBPACK_PLUGIN=1
