--- a/turbo.json
+++ b/turbo.json
@@ -189,7 +189,12 @@
     "@calcom/embed-core#build": {
       "cache": false,
       "outputs": ["../../../apps/web/public/embed/**"],
-      "env": ["EMBED_PUBLIC_VERCEL_URL", "EMBED_PUBLIC_WEBAPP_URL", "EMBED_PUBLIC_EMBED_FINGER_PRINT", "EMBED_PUBLIC_EMBED_VERSION"]
+      "env": [
+        "EMBED_PUBLIC_VERCEL_URL",
+        "EMBED_PUBLIC_WEBAPP_URL",
+        "EMBED_PUBLIC_EMBED_FINGER_PRINT",
+        "EMBED_PUBLIC_EMBED_VERSION"
+      ]
     },
     "embed-tests-update-snapshots:ci": {
       "cache": false,
@@ -237,6 +242,8 @@
     "APP_ROUTER_AUTH_FORGOT_PASSWORD_ENABLED",
     "APP_ROUTER_AUTH_LOGIN_ENABLED",
     "APP_ROUTER_AUTH_LOGOUT_ENABLED",
+    "APP_ROUTER_AUTH_NEW_ENABLED",
+    "APP_ROUTER_AUTH_SAML_ENABLED",
     "APP_ROUTER_TEAMS_ENABLED",
     "APP_USER_NAME",
     "BASECAMP3_CLIENT_ID",
