--- a/.env.example
+++ b/.env.example
@@ -353,6 +353,9 @@ APP_ROUTER_AUTH_LOGIN_ENABLED=0
 APP_ROUTER_AUTH_LOGOUT_ENABLED=0
 APP_ROUTER_AUTH_NEW_ENABLED=0
 APP_ROUTER_AUTH_SAML_ENABLED=0
+APP_ROUTER_AUTH_ERROR_ENABLED=0
+APP_ROUTER_AUTH_PLATFORM_ENABLED=0
+APP_ROUTER_AUTH_OAUTH2_ENABLED=0
 
 # disable setry server source maps
 SENTRY_DISABLE_SERVER_WEBPACK_PLUGIN=1
