--- a/turbo.json
+++ b/turbo.json
@@ -244,6 +244,9 @@
     "APP_ROUTER_AUTH_LOGOUT_ENABLED",
     "APP_ROUTER_AUTH_NEW_ENABLED",
     "APP_ROUTER_AUTH_SAML_ENABLED",
+    "APP_ROUTER_AUTH_ERROR_ENABLED",
+    "APP_ROUTER_AUTH_PLATFORM_ENABLED",
+    "APP_ROUTER_AUTH_OAUTH2_ENABLED",
     "APP_ROUTER_TEAMS_ENABLED",
     "APP_USER_NAME",
     "BASECAMP3_CLIENT_ID",
