--- a/turbo.json
+++ b/turbo.json
@@ -426,6 +426,7 @@
     "NEXT_PUBLIC_HEAD_SCRIPTS",
     "NEXT_PUBLIC_BODY_SCRIPTS",
     "NEXT_PUBLIC_ORG_SELF_SERVE_ENABLED",
-    "NEXT_PUBLIC_API_V2_ROOT_URL"
+    "NEXT_PUBLIC_API_V2_ROOT_URL",
+    "SUPABASE_ANON_KEY"
   ]
 }
