--- a/turbo.json
+++ b/turbo.json
@@ -247,6 +247,10 @@
     "APP_ROUTER_AUTH_ERROR_ENABLED",
     "APP_ROUTER_AUTH_PLATFORM_ENABLED",
     "APP_ROUTER_AUTH_OAUTH2_ENABLED",
+    "APP_ROUTER_MORE_ENABLED",
+    "APP_ROUTER_MAINTENANCE_ENABLED",
+    "APP_ROUTER_UPGRADE_ENABLED",
+    "APP_ROUTER_CONNECT_AND_JOIN_ENABLED",
     "APP_ROUTER_TEAMS_ENABLED",
     "APP_USER_NAME",
     "BASECAMP3_CLIENT_ID",
