--- a/.env.example
+++ b/.env.example
@@ -348,6 +348,7 @@ APP_ROUTER_GETTING_STARTED_STEP_ENABLED=0
 APP_ROUTER_APPS_ENABLED=0
 APP_ROUTER_VIDEO_ENABLED=0
 APP_ROUTER_TEAMS_ENABLED=0
+APP_ROUTER_AVAILABILITY_ENABLED=0
 APP_ROUTER_AUTH_FORGOT_PASSWORD_ENABLED=0
 APP_ROUTER_AUTH_LOGIN_ENABLED=0
 APP_ROUTER_AUTH_LOGOUT_ENABLED=0
