--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -8,9 +8,7 @@
   "main": "index.ts",
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "build": "yarn trpc:generate || true",
-    "trpc:generate": "yarn tsc --project tsconfig.json"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.15",
