Add calendar cache SQL cleanup cron job
Introduces a new scheduled cron endpoint and service for cleaning up old calendar cache SQL events. Includes implementation, tests, and updates Vercel configuration to run the job daily at 6 AM.

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -5,6 +5,10 @@
       "schedule": "0 5 * * *"
     },
     {
+      "path": "/api/cron/calendar-cache-sql-cleanup",
+      "schedule": "0 6 * * *"
+    },
+    {
       "path": "/api/tasks/cron",
       "schedule": "* * * * *"
     },
