--- a/packages/platform/atoms/package.json
+++ b/packages/platform/atoms/package.json
@@ -43,8 +43,7 @@
   "exports": {
     ".": {
       "import": "./dist/cal-atoms.js",
-      "types": "./dist/index.d.ts",
-      "require": "./dist/cal-atoms.umd.cjs"
+      "types": "./dist/index.d.ts"
     },
     "./add-members-switch/AddMembersWithSwitchPlatformWrapper": "./add-members-switch/AddMembersWithSwitchPlatformWrapper.tsx",
     "./add-members-switch/AddMembersWithSwitchWebWrapper": "./add-members-switch/AddMembersWithSwitchWebWrapper.tsx",
@@ -85,6 +84,5 @@
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "typescript": "^5.0.0"
-  },
-  "main": "./dist/cal-atoms.umd.cjs"
+  }
 }
