Rename calendar-subscriptions cron route and update references
Renamed the cron route from calendar-subscriptions-sql to calendar-subscriptions. Updated all references in cron-tester, vercel.json, and documentation to use the new route name for consistency.

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -9,6 +9,10 @@
       "schedule": "0 6 * * *"
     },
     {
+      "path": "/api/cron/calendar-subscriptions",
+      "schedule": "* * * * *"
+    },
+    {
       "path": "/api/tasks/cron",
       "schedule": "* * * * *"
     },
