--- a/apps/api/v2/package.json
+++ b/apps/api/v2/package.json
@@ -108,7 +108,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.0-beta"
   },
   "prisma": {
     "schema": "../../../packages/prisma/schema.prisma"
