--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -195,7 +195,7 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "ts-node": "^10.9.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.0-beta"
   },
   "nextBundleAnalysis": {
     "budget": 358400,
