--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@calcom/eslint-plugin-eslint": "*",
     "@todesktop/tailwind-variants": "^1.0.0",
-    "eslint-config-next": "^13.2.1",
+    "eslint-config-next": "^15.4.5",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-turbo": "^0.0.7",
     "eslint-plugin-playwright": "^0.12.0",
@@ -33,6 +33,6 @@
     "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.0-beta"
   }
 }
