--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -34,6 +34,6 @@
     "@calcom/tsconfig": "*",
     "@calcom/types": "*",
     "@faker-js/faker": "^7.3.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.0-beta"
   }
 }
