--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "turbo run build --filter=@calcom/web...",
     "build:ai": "turbo run build --scope=\"@calcom/ai\"",
     "clean": "find . -name node_modules -o -name .next -o -name .turbo -o -name dist -type d -prune | xargs rm -rf",
-    "db-deploy": "turbo run db-deploy",
+    "db-migrate": "yarn workspace @calcom/prisma run db-migrate",
+    "db-rollback": "yarn workspace @calcom/prisma run db-rollback",
     "db-seed": "turbo run db-seed",
     "db-studio": "yarn prisma studio",
     "deploy": "turbo run deploy",
@@ -41,7 +42,7 @@
     "dev:console": "turbo run dev --scope=\"@calcom/web\" --scope=\"@calcom/console\"",
     "dev:swagger": "turbo run dev --scope=\"@calcom/api-proxy\" --scope=\"@calcom/api\" --scope=\"@calcom/swagger\"",
     "dev:website": "turbo run dev --scope=\"@calcom/web\" --scope=\"@calcom/website\"",
-    "dev": "turbo run dev --scope=\"@calcom/web\"",
+    "dev": "NODE_OPTIONS=--max_old_space_size=4096 && bash ./scripts/start-dev.sh",
     "build-storybook": "turbo run build --scope=\"@calcom/storybook\"",
     "dx": "turbo run dx",
     "i-dev": "infisical run -- turbo run dev --scope=\"@calcom/web\"",
