--- a/turbo.json
+++ b/turbo.json
@@ -343,6 +343,7 @@
     "NEXT_PUBLIC_APP_NAME",
     "NEXT_PUBLIC_AUTH_URL",
     "NEXT_PUBLIC_CALCOM_VERSION",
+    "NEXT_PUBLIC_CALID_VERSION",
     "NEXT_PUBLIC_COMPANY_NAME",
     "NEXT_PUBLIC_CONSOLE_URL",
     "NEXT_PUBLIC_LOGGER_LEVEL",
