fix: atoms fonts for non next apps

--- a/packages/platform/atoms/package.json
+++ b/packages/platform/atoms/package.json
@@ -37,7 +37,8 @@
   },
   "files": [
     "dist",
-    "globals.min.css"
+    "globals.min.css",
+    "fonts"
   ],
   "module": "./dist/cal-atoms.js",
   "exports": {
