--- a/.env.example
+++ b/.env.example
@@ -383,9 +383,12 @@ TASKER_ENABLE_EMAILS=0
 # Ratelimiting via unkey
 UNKEY_ROOT_KEY=
 
-# Used for Cal.ai Enterprise Voice AI Agents
+# Used for Cal.ai Voice AI Agents
 # https://retellai.com
 RETELL_AI_KEY=
+
+# Used for buying phone number for cal ai voice agent
+STRIPE_PHONE_NUMBER_MONTHLY_PRICE_ID=
 
 # Used for the huddle01 integration
 HUDDLE01_API_TOKEN=
