fix: add env variable

--- a/.github/workflows/atoms-e2e.yml
+++ b/.github/workflows/atoms-e2e.yml
@@ -21,6 +21,7 @@ env:
   ATOMS_E2E_API_URL: ${{ secrets.ATOMS_E2E_API_URL }}
   ATOMS_E2E_ORG_ID: ${{ secrets.ATOMS_E2E_ORG_ID }}
   ATOMS_E2E_OAUTH_CLIENT_ID_BOOKER_EMBED: ${{ secrets.ATOMS_E2E_OAUTH_CLIENT_ID_BOOKER_EMBED }}
+  DATABASE_DIRECT_URL: ${{ secrets.CI_DATABASE_URL }}
 
 jobs:
   atoms-e2e:
