--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -23,6 +23,10 @@
     {
       "path": "/api/cron/selected-calendars",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/orphaned-calendars-cleanup",
+      "schedule": "*/5 * * * *"
     }
   ],
   "functions": {
