--- a/packages/app-store/telegram/config.json
+++ b/packages/app-store/telegram/config.json
@@ -4,12 +4,12 @@
   "slug": "telegram",
   "type": "telegram_video",
   "logo": "icon.svg",
-  "url": "https://cal.com/",
+  "url": "https://telegram.org/",
   "variant": "messaging",
   "categories": ["messaging"],
   "publisher": "Cal.com, Inc.",
   "email": "support@cal.com",
-  "description": "Schedule a chat with your guests or have a Telegram Video call.",
+  "description": "Schedule a chat with your guests or have a kartik Video call.",
   "__createdUsingCli": true,
   "appData": {
     "location": {
