fix minor issue

--- a/packages/app-store/telegram/config.json
+++ b/packages/app-store/telegram/config.json
@@ -9,7 +9,7 @@
   "categories": ["messaging"],
   "publisher": "Cal.com, Inc.",
   "email": "support@cal.com",
-  "description": "Schedule a chat with your guests or have a kartik Video call.",
+  "description": "Schedule a chat with your guests or have a Telegram Video call.",
   "__createdUsingCli": true,
   "appData": {
     "location": {
