added telegram support email address

--- a/packages/app-store/telegram/config.json
+++ b/packages/app-store/telegram/config.json
@@ -8,7 +8,7 @@
   "variant": "messaging",
   "categories": ["messaging"],
   "publisher": "Cal.com, Inc.",
-  "email": "support@cal.com",
+  "email": "info@telegram.org",
   "description": "Schedule a chat with your guests or have a Telegram Video call.",
   "__createdUsingCli": true,
   "appData": {
