--- a/packages/app-store/telegram/config.json
+++ b/packages/app-store/telegram/config.json
@@ -5,8 +5,8 @@
   "type": "telegram_video",
   "logo": "icon.svg",
   "url": "https://telegram.org/",
-  "variant": "messaging",
-  "categories": ["messaging"],
+  "variant": "conferencing",
+  "categories": ["conferencing"],
   "publisher": "Cal.com, Inc.",
   "email": "info@telegram.org",
   "description": "Schedule a chat with your guests or have a Telegram Video call.",
