--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -8,13 +8,13 @@ on:
       base_url:
         description: 'Base URL for performance tests'
         required: false
-        default: 'https://cal.com'
+        default: 'https://cal.dev'
 
 jobs:
   performance-tests:
     runs-on: ubuntu-latest
     env:
-      BASE_URL: ${{ github.event.inputs.base_url || 'https://cal.com' }}
+      BASE_URL: ${{ github.event.inputs.base_url || 'https://cal.dev' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
