refactor: code feedback

--- a/turbo.json
+++ b/turbo.json
@@ -278,6 +278,7 @@
     "CI",
     "CLOSECOM_CLIENT_ID",
     "CLOSECOM_CLIENT_SECRET",
+    "CAL_AI_CALL_CREDITS_MULTIPLIER",
     "CRON_API_KEY",
     "CRON_SECRET",
     "CRON_ENABLE_APP_SYNC",
