--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -127,9 +127,9 @@
     "react-dom": "^18.2.0",
     "react-easy-crop": "^3.5.2",
     "react-hook-form": "^7.43.3",
+    "react-international-phone": "^4.6.0",
     "react-live-chat-loader": "^2.8.1",
     "react-multi-email": "^0.5.3",
-    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.7",
     "react-schemaorg": "^2.0.0",
     "react-select": "^5.7.0",
