Removed one unneccasry file change

--- a/packages/prisma/.env
+++ b/packages/prisma/.env
@@ -1,6 +1,1 @@
-# **************** !!WARN!! KEYS NOT AVAILABLE IN C:\ApnaCollege\calcom-docker\calcom\.env.appStore.example ****************
-DATABASE_URL="postgresql://postgres:@localhost:5450/calendso"
-DATABASE_DIRECT_URL="postgresql://postgres:@localhost:5450/calendso"
-INSIGHTS_DATABASE_URL=
-# **************************************************************************************************************************
-
+../../.env
