--- a/.env.example
+++ b/.env.example
@@ -390,6 +390,13 @@ RETELL_AI_KEY=
 # Used for buying phone number for cal ai voice agent
 STRIPE_PHONE_NUMBER_MONTHLY_PRICE_ID=
 
+
+CAL_AI_CALL_CREDITS_MULTIPLIER=
+
+
+# Price for buying a phone number for cal.ai voice agent (Default is 5)
+NEXT_PUBLIC_CAL_AI_PHONE_NUMBER_MONTHLY_PRICE=
+
 # Used for the huddle01 integration
 HUDDLE01_API_TOKEN=
 
