--- a/.env.example
+++ b/.env.example
@@ -394,6 +394,9 @@ STRIPE_PHONE_NUMBER_MONTHLY_PRICE_ID=
 CAL_AI_CALL_CREDITS_MULTIPLIER=
 
 
+STRIPE_WEBHOOK_SECRET_BILLING=
+
+
 # Price for buying a phone number for cal.ai voice agent (Default is 5)
 NEXT_PUBLIC_CAL_AI_PHONE_NUMBER_MONTHLY_PRICE=
 
