--- a/packages/app-store/ics-feedcalendar/package.json
+++ b/packages/app-store/ics-feedcalendar/package.json
@@ -4,6 +4,7 @@
   "name": "@calcom/ics-feed",
   "version": "0.0.0",
   "main": "./index.ts",
+  "type": "module",
   "dependencies": {
     "@calcom/lib": "*",
     "@calcom/prisma": "*",
