--- a/packages/app-store/larkcalendar/package.json
+++ b/packages/app-store/larkcalendar/package.json
@@ -4,6 +4,7 @@
   "name": "@calcom/larkcalendar",
   "version": "0.0.0",
   "main": "./index.ts",
+  "type": "module",
   "description": "Lark Calendar is a time management and scheduling service developed by Lark. Allows users to create and edit events, with options available for type and time. Available to anyone that has a Lark account on both mobile and web versions.",
   "dependencies": {
     "@calcom/lib": "*",
