--- a/packages/app-store/zohocalendar/package.json
+++ b/packages/app-store/zohocalendar/package.json
@@ -4,6 +4,7 @@
   "name": "@calcom/zohocalendar",
   "version": "0.0.0",
   "main": "./index.ts",
+  "type": "module",
   "description": "Zoho Calendar is an online business calendar that makes scheduling easy for you. You can use it to stay on top of your schedule and also share calendars with your team to keep everyone on the same page.",
   "dependencies": {
     "@calcom/prisma": "*"
