Fix missing env var on turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -167,6 +167,7 @@
     "STRIPE_WEBHOOK_SECRET",
     "STRIPE_WEBHOOK_SECRET_APPS",
     "STRIPE_WEBHOOK_SECRET_BILLING",
+    "STRIPE_TEAM_MONTHLY_PRICE_ID",
     "TANDEM_BASE_URL",
     "TANDEM_CLIENT_ID",
     "TANDEM_CLIENT_SECRET",
