Profile password page done

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -27,10 +27,10 @@
   },
   "dependencies": {
     "@calcom/lib": "*",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "5.22.0",
     "@prisma/extension-accelerate": "^0.6.2",
     "@prisma/generator-helper": "^5.4.2",
-    "prisma": "^5.4.2",
+    "prisma": "5.22.0",
     "prisma-kysely": "^1.7.1",
     "ts-node": "^10.9.1",
     "zod": "^3.22.4",
