refactor: change pricing logic

--- a/.env.example
+++ b/.env.example
@@ -391,7 +391,7 @@ RETELL_AI_KEY=
 STRIPE_PHONE_NUMBER_MONTHLY_PRICE_ID=
 
 
-CAL_AI_CALL_CREDITS_MULTIPLIER=
+CAL_AI_CALL_RATE_PER_MINUTE=0.29
 
 
 STRIPE_WEBHOOK_SECRET_BILLING=
