--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -143,6 +143,11 @@ reviews:
       enabled: true
     osvScanner:
       enabled: true
+  instructions: |
+    - Always flag the use of default exports
+    - Suggest named exports as an alternative
+    - Explain the benefits of named exports (tree-shaking, easier refactoring)
+    - Consider exceptions only for main React components or entry points
 chat:
   art: true
   auto_reply: true
