Fix coderabbit.yaml syntax

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -33,11 +33,7 @@ reviews:
     - '!**/.next/**'
   path_instructions:
     - path: "**/*.{ts,tsx,js,jsx}"
-      instructions:
-        - "Always flag the use of default exports"
-        - "Suggest named exports as an alternative"
-        - "Explain the benefits of named exports (tree-shaking, easier refactoring)"
-        - "Consider exceptions only for main React components or entry points"
+      instructions: "Flag default exports and encourage named exports. Named exports provide better tree-shaking, easier refactoring, and clearer imports. Exempt main components like pages, layouts, and components that serve as the primary export of a module."
   abort_on_close: true
   disable_cache: false
   auto_review:
