--- a/.github/workflows/all-checks.yml
+++ b/.github/workflows/all-checks.yml
@@ -74,14 +74,14 @@ jobs:
     uses: ./.github/workflows/e2e-embed-react.yml
     secrets: inherit
 
-  atoms-e2e:
+  e2e-atoms:
     name: Tests
     needs: [lint, build, build-atoms, build-api-v2]
-    uses: ./.github/workflows/atoms-e2e.yml
+    uses: ./.github/workflows/e2e-atoms.yml
     secrets: inherit
 
   required:
-    needs: [lint, type-check, unit-test, integration-test, build, build-api-v1, build-api-v2, e2e, e2e-embed, e2e-embed-react, e2e-app-store, atoms-e2e]
+    needs: [lint, type-check, unit-test, integration-test, build, build-api-v1, build-api-v2, e2e, e2e-embed, e2e-embed-react, e2e-app-store, e2e-atoms]
     if: always()
     runs-on: buildjet-2vcpu-ubuntu-2204
     steps:
