--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -195,11 +195,11 @@ jobs:
     uses: ./.github/workflows/e2e-embed-react.yml
     secrets: inherit
 
-  atoms-e2e:
+  e2e-atoms:
     name: Tests
     needs: [changes, check-label, build, build-atoms, build-api-v2]
     if: ${{ needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
-    uses: ./.github/workflows/atoms-e2e.yml
+    uses: ./.github/workflows/e2e-atoms.yml
     secrets: inherit
 
   analyze:
@@ -211,7 +211,7 @@ jobs:
   merge-reports:
     name: Merge reports
     if: ${{ !cancelled() && needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
-    needs: [changes, check-label, e2e, e2e-embed, e2e-embed-react, e2e-app-store, atoms-e2e]
+    needs: [changes, check-label, e2e, e2e-embed, e2e-embed-react, e2e-app-store, e2e-atoms]
     uses: ./.github/workflows/merge-reports.yml
     secrets: inherit
 
@@ -256,7 +256,7 @@ jobs:
         e2e-embed,
         e2e-embed-react,
         e2e-app-store,
-        atoms-e2e,
+        e2e-atoms,
       ]
     if: always()
     runs-on: buildjet-2vcpu-ubuntu-2204
