--- a/turbo.json
+++ b/turbo.json
@@ -250,7 +250,11 @@
     "CAL_VIDEO_RECORDING_TOKEN_SECRET",
     "ORGANIZER_EMAIL_EXEMPT_DOMAINS",
     "SLOTS_CACHE_TTL",
-    "CSP_POLICY"
+    "CSP_POLICY",
+    "NEXT_PUBLIC_API_V2_URL",
+    "NEXT_PUBLIC_WEBAPP_URL",
+    "NEXT_PUBLIC_WEBSITE_URL",
+    "BUILD_STANDALONE"
   ],
   "tasks": {
     "@calcom/prisma#build": {
