--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -114,6 +114,7 @@
     "next-themes": "^0.2.0",
     "nodemailer": "^6.7.8",
     "nuqs": "^1.20.0",
+    "openid-client": "6.5.0",
     "otplib": "^12.0.1",
     "posthog-js": "^1.164.1",
     "posthog-node": "^4.2.0",
