perf(app-store): use generated category maps; update call-sites

--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "docker-stop-api": "docker ps --filter 'ancestor=cal-api' -q | xargs docker stop",
     "changesets-add": "yarn changeset add",
     "changesets-version": "yarn changeset version",
-    "changesets-release": "NODE_OPTIONS='--max_old_space_size=12288' turbo run build --filter=@calcom/atoms && yarn changeset publish"
+    "changesets-release": "NODE_OPTIONS='--max_old_space_size=12288' turbo run build --filter=@calcom/atoms && yarn changeset publish",
+    "app-store:gen": "node scripts/generate-app-store-maps.mjs"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
