fix: resolve all linting issues in routing-forms package
- Replace 'any' types with 'unknown' for better type safety
- Fix unused variables by prefixing with underscore
- Add missing dependencies to useEffect hooks
- Replace non-null assertions with type assertions
- Remove .skip() from test annotations
- Fix formatting issues

Resolves 65 linting warnings and errors

--- a/packages/app-store/routing-forms/package.json
+++ b/packages/app-store/routing-forms/package.json
@@ -18,5 +18,10 @@
   "devDependencies": {
     "@calcom/types": "*",
     "@types/json-logic-js": "^1.2.1"
+  },
+  "turbo": {
+    "globalEnv": [
+      "NEXT_PUBLIC_IS_E2E"
+    ]
   }
 }
