--- a/packages/app-store/insights/config.json
+++ b/packages/app-store/insights/config.json
@@ -1,20 +1,20 @@
 {
-  "name": "Insihts",
-  "slug": "insihts",
-  "type": "insihts_analytics",
+  "name": "Insights",
+  "slug": "insights",
+  "type": "insights_analytics",
   "logo": "icon.svg",
   "url": "https://cal.com/",
   "variant": "analytics",
   "categories": ["analytics"],
   "publisher": "Cal.com, Inc.",
   "email": "help@cal.com",
-  "description": "Insihts is an all-in-one platform for businesses looking to track user behavior, optimize workflows, and make data-driven decisions. Whether you are a marketer, product manager, or part of a customer success team, Insihts provides the tools you need to succeed.",
+  "description": "Insights is an all-in-one platform for businesses looking to track user behavior, optimize workflows, and make data-driven decisions. Whether you are a marketer, product manager, or part of a customer success team, Insights provides the tools you need to succeed.",
   "extendsFeature": "EventType",
   "appData": {
     "tag": {
       "scripts": [
         {
-          "src": "https://collector.insihts.com/script.js",
+          "src": "https://collector.insights.com/script.js",
           "attrs": {
             "data-website-id": "{SITE_ID}"
           }
