feat: optimize insights analytics script loading and security
- Add async and defer attributes to insights script for non-blocking loading
- Add security attributes: crossorigin='anonymous' and referrerpolicy='strict-origin-when-cross-origin'
- Update Content Security Policy to allow https://collector.insights.com in:
  - script-src directive (both production and development)
  - connect-src directive for analytics data transmission
- Improve page load performance by preventing analytics script from blocking rendering
- Enhance security posture with proper CORS and referrer policies

--- a/packages/app-store/insights/config.json
+++ b/packages/app-store/insights/config.json
@@ -15,6 +15,10 @@
       "scripts": [
         {
           "src": "https://collector.insights.com/script.js",
+          "async": true,
+          "defer": true,
+          "crossorigin": "anonymous",
+          "referrerpolicy": "strict-origin-when-cross-origin",
           "attrs": {
             "data-website-id": "{SITE_ID}"
           }
