--- a/turbo.json
+++ b/turbo.json
@@ -228,6 +228,7 @@
     "NEXT_PUBLIC_ORG_SELF_SERVE_ENABLED",
     "NEXT_PUBLIC_API_V2_ROOT_URL",
     "NEXT_PUBLIC_VAPID_PUBLIC_KEY",
+    "NEXT_PUBLIC_IS_E2E",
     "VAPID_PRIVATE_KEY",
     "CAL_VIDEO_BUCKET_NAME",
     "CAL_VIDEO_BUCKET_REGION",
