chore(actionlint): allow all BuildJet runner labels (2/4/8/16 vCPU) to match workflows

--- a/.actionlint.yaml
+++ b/.actionlint.yaml
@@ -2,3 +2,6 @@
 self-hosted-runner:
   labels:
     - buildjet-2vcpu-ubuntu-2204
+    - buildjet-4vcpu-ubuntu-2204
+    - buildjet-8vcpu-ubuntu-2204
+    - buildjet-16vcpu-ubuntu-2204
