--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "prettier": "^2.8.6",
     "prismock": "^1.33.4",
     "resize-observer-polyfill": "^1.5.1",
+    "ts-node-maintained": "^10.9.6",
     "tsc-absolute": "^1.0.0",
     "typescript": "5.9.0-beta",
     "vitest": "^2.1.1",
