--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -6,7 +6,8 @@
     "clean": "rm -rf .turbo && rm -rf node_modules",
     "build": "ts-node --transpile-only ./auto-migrations.ts",
     "db-deploy": "yarn prisma migrate deploy",
-    "db-migrate": "yarn prisma migrate dev",
+    "db-migrate": "bash ./migrate.sh",
+    "db-rollback": "bash ./rollback.sh -d",
     "db-nuke": "docker compose down --volumes --remove-orphans || docker-compose down --volumes --remove-orphans",
     "db-reset": "run-s db-nuke db-setup",
     "db-seed": "yarn prisma db seed",
