--- a/packages/platform/atoms/package.json
+++ b/packages/platform/atoms/package.json
@@ -46,6 +46,7 @@
       "import": "./dist/cal-atoms.js",
       "types": "./dist/index.d.ts"
     },
+    "./add-members-switch": "./add-members-switch/index.ts",
     "./add-members-switch/AddMembersWithSwitchPlatformWrapper": "./add-members-switch/AddMembersWithSwitchPlatformWrapper.tsx",
     "./add-members-switch/AddMembersWithSwitchWebWrapper": "./add-members-switch/AddMembersWithSwitchWebWrapper.tsx",
     "./availability/AvailabilitySettings": "./availability/AvailabilitySettings.tsx",
