--- a/.env.example
+++ b/.env.example
@@ -393,6 +393,11 @@ HUDDLE01_API_TOKEN=
 # Used to disallow emails as being added as guests on bookings
 BLACKLISTED_GUEST_EMAILS=
 
+# RAZORPAY
+NEXT_PUBLIC_RAZORPAY_CLIENT_ID=
+RAZORPAY_CLIENT_SECRET=
+RAZORPAY_SECRET=
+
 # Used to allow browser push notifications
 # You can use: 'npx web-push generate-vapid-keys' to generate these keys
 NEXT_PUBLIC_VAPID_PUBLIC_KEY=
