--- a/turbo.json
+++ b/turbo.json
@@ -516,6 +516,10 @@
     "NEXT_PUBLIC_SENTRY_LOG_LEVEL",
     "INNGEST_SIGNING_KEY",
     "INNGEST_EVENT_KEY",
-    "NEXT_PUBLIC_INTERCOM_APP_ID"
+    "NEXT_PUBLIC_INTERCOM_APP_ID",
+    "NEXT_PUBLIC_RAZORPAY_CLIENT_ID",
+    "RAZORPAY_CLIENT_SECRET",
+    "RAZORPAY_SECRET",
+    "RAZORPAY_UPI_ENABLED"
   ]
 }
