chore: Make timezone cdn url configurable

--- a/.env.example
+++ b/.env.example
@@ -459,3 +459,7 @@ DATABASE_CHUNK_SIZE=
 # Service Account Encryption Key for encrypting/decrypting service account keys
 # You can use: `openssl rand -base64 24` to generate one
 CALCOM_SERVICE_ACCOUNT_ENCRYPTION_KEY=
+
+# City timezones used to Timezone Selector
+# defaults to https://cdn.jsdelivr.net/npm/city-timezones@1.2.1/data/cityMap.json
+NEXT_PUBLIC_CAL_CITY_TIMEZONES_URL=
