fix: correct timezone label formatting (remove duplicate GMT and misplaced bracket)

--- a/packages/prisma/.env
+++ b/packages/prisma/.env
@@ -1,1 +1,4 @@
-../../.env
+# ../../.env
+
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/calcom
+DATABASE_DIRECT_URL=postgresql://postgres:postgres@localhost:5432/calcom
