--- a/.env.example
+++ b/.env.example
@@ -27,10 +27,10 @@ CALCOM_PRIVATE_API_ROUTE="https://goblin.cal.com"
 # ***********************************************************************************************************
 
 # - DATABASE ************************************************************************************************
-DATABASE_URL="postgresql://postgres:@localhost:5450/calendso"
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/calcom
 # Needed to run migrations while using a connection pooler like PgBouncer
 # Use the same one as DATABASE_URL if you're not using a connection pooler
-DATABASE_DIRECT_URL="postgresql://postgres:@localhost:5450/calendso"
+DATABASE_DIRECT_URL=postgresql://postgres:postgres@localhost:5432/calcom
 INSIGHTS_DATABASE_URL=
 
 # Uncomment to enable a dedicated connection pool for Prisma using Prisma Data Proxy
@@ -44,11 +44,11 @@ PRISMA_GENERATE_DATAPROXY=
 # - SHARED **************************************************************************************************
 # Set this to http://app.cal.local:3000 if you want to enable organizations, and
 # check variable ORGANIZATIONS_ENABLED at the bottom of this file
-NEXT_PUBLIC_WEBAPP_URL='http://localhost:3000'
+NEXT_PUBLIC_WEBAPP_URL=http://localhost:3000
 # Change to 'http://localhost:3001' if running the website simultaneously
-NEXT_PUBLIC_WEBSITE_URL='http://localhost:3000'
-NEXT_PUBLIC_CONSOLE_URL='http://localhost:3004'
-NEXT_PUBLIC_EMBED_LIB_URL='http://localhost:3000/embed/embed.js'
+NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
+NEXT_PUBLIC_CONSOLE_URL=http://localhost:3004
+NEXT_PUBLIC_EMBED_LIB_URL=http://localhost:3000/embed/embed.js
 
 # To enable SAML login, set both these variables
 # @see https://github.com/calcom/cal.com/tree/main/packages/features/ee#setting-up-saml-login
@@ -78,7 +78,7 @@ RESERVED_SUBDOMAINS='"app","auth","docs","design","console","go","status","api",
 NEXTAUTH_URL='http://localhost:3000'
 # @see: https://next-auth.js.org/configuration/options#nextauth_secret
 # You can use: `openssl rand -base64 32` to generate one
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=1aeor+ATMAVZmoaIhGEH0SItf74pXlg4kS41WQxzCcE=
 # Used for cross-domain cookie authentication
 NEXTAUTH_COOKIE_DOMAIN=
 
@@ -95,10 +95,12 @@ CRON_ENABLE_APP_SYNC=false
 # Application Key for symmetric encryption and decryption
 # must be 32 bytes for AES256 encryption algorithm
 # You can use: `openssl rand -base64 32` to generate one
-CALENDSO_ENCRYPTION_KEY=
+CALENDSO_ENCRYPTION_KEY=rHduGvXLpaERrcSUHMuXqRJ/PbZjJh5IEj+dRmDFmes=
 
 # Intercom Config
 NEXT_PUBLIC_INTERCOM_APP_ID=
+
+
 
 # Secret to enable Intercom Identity Verification
 INTERCOM_SECRET=
@@ -423,7 +425,7 @@ NEXT_PUBLIC_WEBSITE_TERMS_URL=
 
 # NEXT_PUBLIC_LOGGER_LEVEL=3 sets to log info, warn, error and fatal logs.
 # [0: silly & upwards, 1: trace & upwards, 2: debug & upwards, 3: info & upwards, 4: warn & upwards, 5: error & fatal, 6: fatal]
-NEXT_PUBLIC_LOGGER_LEVEL=
+NEXT_PUBLIC_LOGGER_LEVEL={level}
 
 # For storing Daily Video recordings on S3 Bucket
 CAL_VIDEO_BUCKET_NAME=
@@ -472,3 +474,4 @@ DATABASE_CHUNK_SIZE=
 # Service Account Encryption Key for encrypting/decrypting service account keys
 # You can use: `openssl rand -base64 24` to generate one
 CALCOM_SERVICE_ACCOUNT_ENCRYPTION_KEY=
+'NEXT_PUBLIC_DEBUG=1' 
