update variable names

--- a/turbo.json
+++ b/turbo.json
@@ -255,8 +255,8 @@
     "NEXT_PUBLIC_WEBAPP_URL",
     "NEXT_PUBLIC_WEBSITE_URL",
     "BUILD_STANDALONE",
-    "APPLE_ID",
-    "APPLE_CONNECT_APP_SPECIFIC_PASSCODE"
+    "ATOMS_E2E_APPLE_ID",
+    "ATOMS_E2E_APPLE_CONNECT_APP_SPECIFIC_PASSCODE"
   ],
   "tasks": {
     "@calcom/prisma#build": {
