use etags and 1 yera client caching

--- a/turbo.json
+++ b/turbo.json
@@ -257,7 +257,10 @@
     "NEXT_PUBLIC_API_V2_URL",
     "NEXT_PUBLIC_WEBAPP_URL",
     "NEXT_PUBLIC_WEBSITE_URL",
-    "BUILD_STANDALONE"
+    "BUILD_STANDALONE",
+    "MEETING_OG_IMAGE_VERSION",
+    "GENERIC_OG_IMAGE_VERSION",
+    "APP_OG_IMAGE_VERSION"
   ],
   "tasks": {
     "@calcom/prisma#build": {
