fix: rename kyzon-space app directory to kyzonspacevideo
- renamed app directory from `kyzon-space` → `kyzonspacevideo` because `video.adapters.generated.ts` generates keys from the directory name.
- otherwise, `getVideoAdapters()` in `videoClient.ts` will not be able to resolve `videoAdapterImport`, as it gets the key of `VideoApiAdapterMap` from the "type" of the app, which is kyzonspace_video.
- the "_video" suffix is required in the type, as otherwise the `deleteMeeting` method wouldn't be called, due to code that checks for whether the app type ends with "_video".
- update slug to `kyzonspacevideo` as well, since assets (e.g. `logo.svg`) are fetched using that path.

--- a/packages/app-store/kyzonspacevideo/config.json
+++ b/packages/app-store/kyzonspacevideo/config.json
@@ -1,8 +1,8 @@
 {
   "/*": "Don't modify slug - If required, do it using cli edit command",
   "name": "KYZON Space",
-  "slug": "kyzon-space",
-  "type": "kyzon-space_video",
+  "slug": "kyzonspacevideo",
+  "type": "kyzonspace_video",
   "logo": "icon.svg",
   "url": "https://kyzonsolutions.com",
   "variant": "conferencing",
