add key to .env.example and remove unused plain route

--- a/.env.example
+++ b/.env.example
@@ -103,6 +103,9 @@ NEXT_PUBLIC_INTERCOM_APP_ID=
 # Secret to enable Intercom Identity Verification
 INTERCOM_SECRET=
 
+# Intercom api token for free users
+INTERCOM_API_TOKEN=
+
 # Posthog Config
 NEXT_PUBLIC_POSTHOG_KEY=
 
